add new website from server na

--- a/xem-phim-bo/lam-lai-cuoc-doi-cua-chung-ta/index.html
+++ b/xem-phim-bo/lam-lai-cuoc-doi-cua-chung-ta/index.html
@@ -1189,7 +1189,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             5
             </dd>
             <br/>
            </dl>
@@ -1659,18 +1659,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dem-o-truong-hoc" title="Đêm Ở Trường Học">
+          <a class="list-top-movie-link" href="/phim-moi/carry-on-munna-bhai" title="Carry On, Munna Bhai">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dem-o-truong-hoc-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/carry-on-munna-bhai-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đêm Ở Trường Học
+             Carry On, Munna Bhai
             </span>
             <span class="list-top-movie-item-en">
-             Night School
+             Carry On, Munna Bhai
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/thuc-thi-phap-luat" title="Thực Thi Pháp Luật">
+           <span class="status">
+            HD Lồng Tiếng
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thuc-thi-phap-luat-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Thực Thi Pháp Luật
+            </span>
+            <span class="list-top-movie-item-en">
+             Thực Thi Pháp Luật
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/nguoi-dan-ong-khong-khi" title="Người đàn ông không khí">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-dan-ong-khong-khi-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Người đàn ông không khí
+            </span>
+            <span class="list-top-movie-item-en">
+             Air Man
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1681,21 +1725,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chuyen-la-o-thon-hoang" title="Chuyện Lạ Ở Thôn Hoang">
+          <a class="list-top-movie-link" href="/phim-moi/vat-lon-den-cung" title="Vật lộn đến cùng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-la-o-thon-hoang-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vat-lon-den-cung-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chuyện Lạ Ở Thôn Hoang
+             Vật lộn đến cùng
             </span>
             <span class="list-top-movie-item-en">
-             Strange Things in A Deserted Village
+             The Ultimate Fight
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1703,65 +1747,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/so-tay-huong-dan-yeu-duong-tiet-kiem" title="Sổ Tay Hướng Dẫn Yêu Đương Tiết Kiệm">
+          <a class="list-top-movie-link" href="/phim-moi/thang-ngay-tuoi-tre" title="Tháng ngày tuổi trẻ">
            <span class="status">
-            HD Vietsub
+            Vietsub - HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/so-tay-huong-dan-yeu-duong-tiet-kiem-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thang-ngay-tuoi-tre-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Sổ Tay Hướng Dẫn Yêu Đương Tiết Kiệm
+             Tháng ngày tuổi trẻ
             </span>
             <span class="list-top-movie-item-en">
-             Love On a Shoestring
+             Orange Days
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nu-hoang-tra-gia" title="Nữ Hoàng Trả Giá">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nu-hoang-tra-gia-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Nữ Hoàng Trả Giá
-            </span>
-            <span class="list-top-movie-item-en">
-             My Bargain Queen
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dap-den-tiep-noi" title="Đáp Đền Tiếp Nối">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dap-den-tiep-noi-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Đáp Đền Tiếp Nối
-            </span>
-            <span class="list-top-movie-item-en">
-             Pay It Forward
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
