--- a/xem-phim-bo/that-hinh-dai-toi-tu-ky-si-khai-huyen/index.html
+++ b/xem-phim-bo/that-hinh-dai-toi-tu-ky-si-khai-huyen/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             1
+             3
             </dd>
             <br/>
            </dl>
@@ -1753,84 +1753,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hon-loan-phan-3" title="Hỗn loạn (Phần 3)">
+          <a class="list-top-movie-link" href="/phim-moi/muc-tieu-tren-khong" title="Mục Tiêu Trên Không">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hon-loan-phan-3-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/muc-tieu-tren-khong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hỗn loạn (Phần 3)
+             Mục Tiêu Trên Không
             </span>
             <span class="list-top-movie-item-en">
-             Fauda (Season 3)
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/to-chuc-rugal" title="Tổ Chức Rugal">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/to-chuc-rugal-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Tổ Chức Rugal
-            </span>
-            <span class="list-top-movie-item-en">
-             Rugal
-            </span>
-            <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ngoi-nha-nho-tren-thao-nguyen-phan-7" title="Ngôi Nhà Nhỏ Trên Thảo Nguyên (Phần 7)">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngoi-nha-nho-tren-thao-nguyen-phan-7-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Ngôi Nhà Nhỏ Trên Thảo Nguyên (Phần 7)
-            </span>
-            <span class="list-top-movie-item-en">
-             Little House on the Prairie (Season 7)
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tron-thi-ngai-ma-thoi-cung-ke-phan-1" title="Trốn Thì Ngại Mà Thôi Cũng Kệ (Phần 1)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tron-thi-ngai-ma-thoi-cung-ke-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Trốn Thì Ngại Mà Thôi Cũng Kệ (Phần 1)
-            </span>
-            <span class="list-top-movie-item-en">
-             The Full-Time Wife Escapist (Season 1)
+             Drones
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1841,21 +1775,87 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thu-sinh-xinh-dep" title="Thư Sinh Xinh Đẹp">
+          <a class="list-top-movie-link" href="/phim-moi/cam-on-vi-da-de-anh-gap-duoc-em" title="Cảm Ơn Vì Đã Để Anh Gặp Được Em">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thu-sinh-xinh-dep-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cam-on-vi-da-de-anh-gap-duoc-em-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thư Sinh Xinh Đẹp
+             Cảm Ơn Vì Đã Để Anh Gặp Được Em
             </span>
             <span class="list-top-movie-item-en">
-             In a Class of Her Own
+             Meeting You
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/doi-song-thuong-luu" title="Đời Sống Thượng Lưu">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doi-song-thuong-luu-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Đời Sống Thượng Lưu
+            </span>
+            <span class="list-top-movie-item-en">
+             The Great Beauty
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/cabin-cua-tien-si-caligari" title="Cabin Của Tiến Sĩ Caligari">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cabin-cua-tien-si-caligari-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Cabin Của Tiến Sĩ Caligari
+            </span>
+            <span class="list-top-movie-item-en">
+             Das Cabinet des Dr. Caligari
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/doan-tuy-tung-phan-2" title="Đoàn Tùy Tùng (Phần 2)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doan-tuy-tung-phan-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Đoàn Tùy Tùng (Phần 2)
+            </span>
+            <span class="list-top-movie-item-en">
+             Entourage (Season 2)
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
