--- a/xem-phim-moi/truy-tim-phep-thuat/index.html
+++ b/xem-phim-moi/truy-tim-phep-thuat/index.html
@@ -1185,7 +1185,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             4
             </dd>
             <br/>
            </dl>
@@ -1655,65 +1655,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/jo-yi-va-am-hanh-ngu-su-ngu-su-tai-ba-va-quy-co-thong-thai" title="Jo Yi và Ám Hành Ngự Sử (Ngự Sử Tài Ba Và Quý Cô Thông Thái)">
-           <span class="status">
-            HD Vietsub + Thuyết minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/jo-yi-va-am-hanh-ngu-su-ngu-su-tai-ba-va-quy-co-thong-thai-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Jo Yi và Ám Hành Ngự Sử (Ngự Sử Tài Ba Và Quý Cô Thông Thái)
-            </span>
-            <span class="list-top-movie-item-en">
-             Secret Royal Inspector &amp; Joy
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/trai-dia-nguc-ac-mong-tuoi-teen" title="Trại địa ngục: Ác mộng tuổi teen">
-           <span class="status">
-            Vietsub - HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/trai-dia-nguc-ac-mong-tuoi-teen-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Trại địa ngục: Ác mộng tuổi teen
-            </span>
-            <span class="list-top-movie-item-en">
-             Hell Camp: Teen Nightmare
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/co-nang-quyen-ru-tuoi-18" title="Cô Nàng Quyến Rũ Tuổi 18">
+          <a class="list-top-movie-link" href="/phim-moi/tinh-yeu-cua-vua-khi" title="Tình yêu của vua khỉ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-nang-quyen-ru-tuoi-18-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-yeu-cua-vua-khi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cô Nàng Quyến Rũ Tuổi 18
+             Tình yêu của vua khỉ
             </span>
             <span class="list-top-movie-item-en">
-             섹스소녀 18
+             西游外传之爱上美猴王
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1721,18 +1677,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ve-nha-truoc-troi-toi-phan-2" title="Về Nhà Trước Trời Tối (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/pinky-malinky-phan-3" title="Pinky Malinky (Phần 3)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ve-nha-truoc-troi-toi-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/pinky-malinky-phan-3-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Về Nhà Trước Trời Tối (Phần 2)
+             Pinky Malinky (Phần 3)
             </span>
             <span class="list-top-movie-item-en">
-             Home Before Dark (Season 2)
+             Pinky Malinky (Season 3)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1743,21 +1699,65 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hoa-nhai-mau-xanh" title="Hoa Nhài Màu Xanh">
+          <a class="list-top-movie-link" href="/phim-moi/ro-bot-biet-tuot-gio-giai-dap-phan-2" title="Rô bốt biết tuốt: Giờ giải đáp (Phần 2)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoa-nhai-mau-xanh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ro-bot-biet-tuot-gio-giai-dap-phan-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hoa Nhài Màu Xanh
+             Rô bốt biết tuốt: Giờ giải đáp (Phần 2)
             </span>
             <span class="list-top-movie-item-en">
-             Blue Jasmine
+             StoryBots: Answer Time (Season 2)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/nu-hoang-lua-dao" title="Nữ Hoàng Lừa Đảo">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nu-hoang-lua-dao-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Nữ Hoàng Lừa Đảo
+            </span>
+            <span class="list-top-movie-item-en">
+             Queenpins
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/huyen-thoai-vikings-phan-1" title="Huyền Thoại Vikings Phần 1">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/huyen-thoai-vikings-phan-1-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Huyền Thoại Vikings Phần 1
+            </span>
+            <span class="list-top-movie-item-en">
+             Vikings (Season 1)
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
