add new website from server na

--- a/xem-phim-bo/ho-ly-trong-tay/index.html
+++ b/xem-phim-bo/ho-ly-trong-tay/index.html
@@ -1184,7 +1184,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1654,18 +1654,84 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cac-chang-trai-trong-hoi" title="Các chàng trai trong hội">
+          <a class="list-top-movie-link" href="/phim-moi/hoi-san-quy-phan-2" title="Hội Săn Quỷ (Phần 2)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cac-chang-trai-trong-hoi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoi-san-quy-phan-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Các chàng trai trong hội
+             Hội Săn Quỷ (Phần 2)
             </span>
             <span class="list-top-movie-item-en">
-             The Boys in the Band
+             Diablero (Season 2)
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/ngay-cua-chua" title="Ngày của Chúa">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngay-cua-chua-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Ngày của Chúa
+            </span>
+            <span class="list-top-movie-item-en">
+             The Day of the Lord
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/xe-co-dien-ca-phe-va-chuyen-tro-cung-danh-hai-phan-1" title="XE CỔ ĐIỂN, CÀ PHÊ VÀ CHUYỆN TRÒ CÙNG DANH HÀI (PHẦN 1)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xe-co-dien-ca-phe-va-chuyen-tro-cung-danh-hai-phan-1-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             XE CỔ ĐIỂN, CÀ PHÊ VÀ CHUYỆN TRÒ CÙNG DANH HÀI (PHẦN 1)
+            </span>
+            <span class="list-top-movie-item-en">
+             Comedians in Cars Getting Coffee (Season 1)
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/toi-da-giup-cap-duoi-ngoai-tinh" title="Tôi Đã Giúp Cấp Dưới Ngoại Tình">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/toi-da-giup-cap-duoi-ngoai-tinh-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tôi Đã Giúp Cấp Dưới Ngoại Tình
+            </span>
+            <span class="list-top-movie-item-en">
+             야설작가 다리벌리는 여비서
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1676,84 +1742,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/doi-tac-hoan-hao" title="Đối Tác Hoàn Hảo">
+          <a class="list-top-movie-link" href="/phim-moi/hoi-trom-vat-phan-2" title="Hội Trộm Vặt (Phần 2)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/good-job-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoi-trom-vat-phan-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đối Tác Hoàn Hảo
+             Hội Trộm Vặt (Phần 2)
             </span>
             <span class="list-top-movie-item-en">
-             Good Job
-            </span>
-            <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ronny-chieng-asian-comedian-destroys-america" title="Ronny Chieng: Asian Comedian Destroys America!">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ronny-chieng-asian-comedian-destroys-america-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Ronny Chieng: Asian Comedian Destroys America!
-            </span>
-            <span class="list-top-movie-item-en">
-             Ronny Chieng: Asian Comedian Destroys America!
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bien-nien-su-narnia-hanh-trinh-tren-tau-dawn-treader" title="Biên Niên Sử Narnia: Hành Trình Trên Tàu Dawn Treader">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bien-nien-su-narnia-hanh-trinh-tren-tau-dawn-treader-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Biên Niên Sử Narnia: Hành Trình Trên Tàu Dawn Treader
-            </span>
-            <span class="list-top-movie-item-en">
-             The Chronicles of Narnia: The Voyage of the Dawn Treader
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hanh-trinh-cua-con-tim" title="Hành Trình Của Con Tim">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hanh-trinh-cua-con-tim-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Hành Trình Của Con Tim
-            </span>
-            <span class="list-top-movie-item-en">
-             Sai Tarn Hua Jai
+             Trinkets (Season 2)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
