add new website from server na

--- a/xem-phim-moi/truy-tim-phep-thuat/index.html
+++ b/xem-phim-moi/truy-tim-phep-thuat/index.html
@@ -1185,7 +1185,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1655,84 +1655,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tinh-yeu-cua-vua-khi" title="Tình yêu của vua khỉ">
+          <a class="list-top-movie-link" href="/phim-moi/anitta-den-tu-honorio" title="Anitta: Đến từ Honório">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-yeu-cua-vua-khi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/anitta-den-tu-honorio-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tình yêu của vua khỉ
+             Anitta: Đến từ Honório
             </span>
             <span class="list-top-movie-item-en">
-             西游外传之爱上美猴王
-            </span>
-            <span class="list-top-movie-item-view">
-             0 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/pinky-malinky-phan-3" title="Pinky Malinky (Phần 3)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/pinky-malinky-phan-3-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Pinky Malinky (Phần 3)
-            </span>
-            <span class="list-top-movie-item-en">
-             Pinky Malinky (Season 3)
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ro-bot-biet-tuot-gio-giai-dap-phan-2" title="Rô bốt biết tuốt: Giờ giải đáp (Phần 2)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ro-bot-biet-tuot-gio-giai-dap-phan-2-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Rô bốt biết tuốt: Giờ giải đáp (Phần 2)
-            </span>
-            <span class="list-top-movie-item-en">
-             StoryBots: Answer Time (Season 2)
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nu-hoang-lua-dao" title="Nữ Hoàng Lừa Đảo">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nu-hoang-lua-dao-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Nữ Hoàng Lừa Đảo
-            </span>
-            <span class="list-top-movie-item-en">
-             Queenpins
+             Anitta: Made In Honório
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1743,18 +1677,84 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/huyen-thoai-vikings-phan-1" title="Huyền Thoại Vikings Phần 1">
+          <a class="list-top-movie-link" href="/phim-moi/shoot-em-up" title="Shoot ‘Em Up">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/huyen-thoai-vikings-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/shoot-em-up-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Huyền Thoại Vikings Phần 1
+             Shoot ‘Em Up
             </span>
             <span class="list-top-movie-item-en">
-             Vikings (Season 1)
+             Shoot 'Em Up
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/toi-tam-ly" title="Tội tâm lý">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/toi-tam-ly-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tội tâm lý
+            </span>
+            <span class="list-top-movie-item-en">
+             Tội tâm lý
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/sai-gon-yo" title="Sài Gòn Yo!">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sai-gon-yo-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Sài Gòn Yo!
+            </span>
+            <span class="list-top-movie-item-en">
+             Saigon Electric
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/nguoi-hung-cuoi-cung" title="Người Hùng Cuối Cùng">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-hung-cuoi-cung-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Người Hùng Cuối Cùng
+            </span>
+            <span class="list-top-movie-item-en">
+             Last Action Hero
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
